--- a/frontend_timekeeping/src/pages/register/RegisterPage.module.css
+++ b/frontend_timekeeping/src/pages/register/RegisterPage.module.css
@@ -8,10 +8,10 @@
     padding: 20px;
 }
 
-html,
-body {
-    overflow: hidden;
-}
+    /* html,
+    body {
+        overflow: hidden;
+    } */
 
 /* Card chứa form */
 .formCard {
