Add AI and history, cham cong

--- a/frontend_timekeeping/src/App.css
+++ b/frontend_timekeeping/src/App.css
@@ -47,6 +47,15 @@
   background-color: #c6f9ba;
 }
 
+.has-clocked{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
 body {
   overflow: auto;
 }
